# ackc

./: .env.example  .gitignore  compose.yaml  dockerfile  pyproject.toml  readme.md
.github/workflows/: publish.yml  readme.md
ackc/: __init__.py  base.py  env.py  exceptions.py  keycloak.py  management.py  tokens.py
ackc/api/: __init__.py  attack_detection.py  authentication.py  authorization.py  base.py  client_attribute_certificate.py  client_initial_access.py  client_registration_policy.py  client_role_mappings.py  client_scopes.py  clients.py  components.py  events.py  groups.py  identity_providers.py  keys.py  organizations.py  protocol_mappers.py  realms.py  role_mapper.py  roles.py  roles_by_id.py  scope_mappings.py  sessions.py  users.py
ackc/tool/: export_realm.py  get_token.py  mc.py  token.py
examples/: basic_usage.py
scripts/: generate_client.py
scripts/templates/: client.py.jinja  endpoint_module.py.jinja
