[project]
name = "ackc"
version = "0.7.1"
description = "Acie's API Client for Keycloak"
readme = "readme.md"
requires-python = ">=3.13"

authors = [
    { name = "Phillip Sitbon", email = "phillip.sitbon@gmail.com"},
]

packages = [
    { include = "ackc" },
    { include = "gen", format = "sdist" },  # NOTE: uv_build doesn't include this as expected
]

dependencies = [
    "attrs>=25.3.0",
    "niquests>=3.14.1",
]

[project.urls]
Homepage = "https://github.com/acie-io/ackc"
Repository = "https://github.com/acie-io/ackc.git"
Documentation = "https://github.com/acie-io/ackc#readme"
Issues = "https://github.com/acie-io/ackc/issues"
"Release Notes" = "https://github.com/acie-io/ackc/releases"

[dependency-groups]
dev = [
    "openapi-python-client>=0.25.3",
]

[project.scripts]
auth-token = "ackc.tool.token:main"
auth-mc = "ackc.tool.mc:main"
auth-realm-export = "ackc.tool.export_realm:main"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
